zeit.cms changes
================

1.0b7 (unreleased)
------------------

- Automatisches Update der Bildmetadaten in Objekten, die das Bild
  referenzieren.

1.0b6 (2008-07-10)
------------------

- View zum Anzeigen der Objekte, die den meisten Speicher verbrauchen.
- Repository lädt jetzt Objekte auch per Pfad "/cms/work" und gibt das
  entsprechende "http://xml.zeit.de"-Objekt zurück.
- Portraitboxen haben jetzt noch einen <block> (bug #4325).
- Der Text von Portraitboxen wird richtig geladen.
- Biga: Text ist kein Pfichtfeld mehr (bug #4324).
- XML-RPC-Methode zum veröffentlichen (bug #4331).
- Align auf Bildern (bug #4349).
- Änderungsdatum in Dateilisten in CET statt GMT (bug #4354).
- Extra-BU bei Bildergallerien.
- Begrenzung des Veröffentlichungszeitruams auf Daten bis 2030, weil sonst der
  lovely.remotetask mist baut.
- Konzept von temporären Checkouts um parallel veröffentlichen zu können.


1.0b5 (2008-06-30)
------------------

- TypeError beim laden der UnknownResource durch neue Subclass
  PersistentUnknownResource behoben.

1.0b4 (2008-06-30)
------------------

- CMS-Lock-Behandlung repariert wenn Resourcen in anderne System gesperrt
  werden (oder das CMS das denkt).
- Workflow: Fehler beim Veröffentlichen/Zurückziehen im Objectlog speichern
  und dem Benutzer anzeigen.
- Unknown resource ist jetzt ``Persistent``, damit klappt auch das Speichern.
- Repository entfernt Objekte im RAM an den Transaktionsgrenzen.
- View zum anzeigen der Refcounts.

1.0b3 (2008-06-28)
------------------

- Speichern von Assets stabiler (Persistenz-Problem).
- Bild-Metdaten-Anzeige: Titel wird jetzt angezeigt (bug #4304).
- CMS geht nicht mehr kaputt, wenn das today.xml leer ist (bug #4323).

1.0b2 (2008-06-28)
------------------

- Die Channel-Ansicht geht nicht mehr kaputt, wenn ein Objekt ohne Titel
  syndiziert wurde (bug #4312).
- Entfernen von Links aus Channels stabilisiert.
- Assets-Popup: Einklappen/Ausklappen des Baumens ohne Zugriff auf
  WebDAV-Server.